hphp/hack/test/typecheck/unsafe_cast/ignored/arity_error.php.exp
File "arity_error.php", line 8, characters 51-53:
This argument must be a literal format string (Typing[4027])
File "arity_error.php", line 4, characters 10-45:
Too few arguments (required 1 but got 0) (Typing[4104])
  File "soundness.hhi", line 31, characters 10-20:
  Definition is here
File "arity_error.php", line 8, characters 51-53:
Invalid argument (Typing[4110])
  File "soundness.hhi", line 33, characters 4-28:
  Expected `HH\FormatString<nothing>`
  File "arity_error.php", line 7, characters 25-31:
  But got `dynamic`
